# Synthesis

./: .gitignore  Makefile  README.md  go.mod  go.sum  pyproject.toml  synthesis.yaml
Synthesis/: haven.py  ingress.py  vine.py  vine_networking.py
cmd/synthesis-cli/: main.go
cmd/synthesis-server/: main.go
data/deployments/: nginx-deployment.json
examples/: nginx-service.yaml  nginx-workload.yaml
pkg/api/: types.go
pkg/runtime/: interface.go
pkg/runtime/containerd/: containerd.go
pkg/runtime/docker/: docker.go
pkg/server/: controllers.go  server.go
pkg/storage/: file.go  interface.go
utils/: dockerfile.test  ns_test.sh
